--- a/vignettes/R_Introduction_hydRology.Rmd
+++ b/vignettes/R_Introduction_hydRology.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "R Introductionfor CSHS-hydRology package"
+title: "R Introduction for CSHS-hydRology R Package"
 author: "R. Chlumsky"
-date: "March 2018"
+date: "June 2018"
 output: html_document
 urlcolor: blue
 ---
@@ -314,7 +314,7 @@ y <- abs(rnorm(length(dd)))*x
 df <- data.frame("Date"=dd,x,y)
 
 # basic hydrograph plot
-hydrograph.plot(flows=df) 
+HydrographPlot(flows=df) 
 ```
 
 This creates a basic hydrograph plot without the bells and whistles, using a data frame with the Date attribute (formatted as a Date). Let's add some precipitation data and adjust the plot limits.
@@ -333,7 +333,7 @@ set.seed(67891)
 precip <- data.frame("Date"=dd,"precip"=abs(rnorm(length(dd)))*10)
 
 # hydrograph plot with precipitation
-hydrograph.plot(flows=df,precip=precip,range.mult.flow=2,range.mult.precip=2) 
+HydrographPlot(flows=df,precip=precip,range.mult.flow=2,range.mult.precip=2) 
 ```
 
 Feel free to explore more options in the parameters. For example, see if you can create a hydrograph plot that:
